@@ -14,6 +14,8 @@ Version 5.1.3 -
     to select the old behavior of not always respecting the binary flags of a columns.
   - Added ability to use blobs to store true UTF-8 data (see help)
   - Help is now integrated into Visual Studio 2005 and includes content other than the API 
+  - Fixed problem reported by user where MySqlMembershipProvider.GetUser was attempting to 
+    reuse the connection to update a table while a reader was open on it.    
     
 Version 5.1.2 - 6/12/2007
   - Fixed integration with the Website Administration Tool.  Before this fix, the test link
